# service-fabric-metadata

./: CMakeLists.txt  README.md  global.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
.metadata/: generate.proj
.windows/winmd/: Microsoft.ServiceFabric.winmd
cmake/: ImportFabric.cmake  fetch_get_files.cmake  fetch_get_internal_files.cmake
docs/: Development.md
examples/: CMakeLists.txt  main.cpp
scripts/: check_winmd.ps1
src/: CMakeLists.txt
src/fabric/: CMakeLists.txt
src/fabric_internal/: CMakeLists.txt
src/fabric_pal/: CMakeLists.txt
src/fabric_pal/include/: rpc.h  rpcndr.h
